--- a/templates/item.html
+++ b/templates/item.html
@@ -1,28 +1,19 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-
 <!DOCTYPE html>
 <html lang="">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet" />
     <link href="{% static 'pr/fontawesome/css/all.min.css' %}" rel="stylesheet" />
     <link href="{% static 'pr/css/templatemo-comparto.css' %}" rel="stylesheet" />
     <title>Description about product</title>
-<!--
-
-Comparto TemplateMo
-
-https://templatemo.com/tm-544-comparto
-
--->
 </head>
-
-<body>
-<br><br><br>          
+<!--<body>-->
+<br><br><br>
         <section class="tm-mb-1" id="about">
             <div class="tm-row tm-about-row">
                 <div class="tm-section-1-l">
@@ -41,6 +32,6 @@ https://templatemo.com/tm-544-comparto
                 </article>
             </div>
         </section>
-</body>
-</html>
+<!--</body>-->
 {% endblock %}
+</html>
