--- a/templates/cart.html
+++ b/templates/cart.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 body {
@@ -104,21 +104,16 @@ span.price {
 }
 </style>
 </head>
-<body>
+<!--<body>-->
 <h4>Cart <span class="price" style="color:white"><i class="fa fa-shopping-cart"></i> <b>{{itc}}</b></span></h4>
 
 {% for i in ci %}
   <div class="col-25">
     <div class="container">
-
-        <a href="{% url 'remove' i.prodt.id %}"><i class="fa fa-trash" style="font-size:20px"></i></a>&nbsp;&nbsp;&nbsp;<a href="{{i.prodt.get_url}}"><img src="{{i.prodt.img.url}}" alt="{{i.prodt.name}}" style="width:70px;height:70px;"></a>
+      <a href="{% url 'remove' i.prodt.id %}"><i class="fa fa-trash" style="font-size:20px"></i></a>&nbsp;&nbsp;&nbsp;<a href="{{i.prodt.get_url}}"><img src="{{i.prodt.img.url}}" alt="{{i.prodt.name}}" style="width:70px;height:70px;"></a>
       <p><a href="{{i.prodt.get_url}}">{{i.prodt.name}}</a><span class="price">Rs {{i.total}}<br><a href="{% url 'add_cart' i.prodt.id %}"><i class="fa fa-plus" style="font-size:10px"></i></a>  {{i.quantity}}  <a href="{% url 'cart_decrement' i.prodt.id %}"><i class="fa fa-minus" style="font-size:10px"></i></a></span></p>
       <p>Rs{{i.prodt.price}} x 1</p>
       <p>Qty :{{i.quantity}}</p>
-
-
-      <hr>
-
     </div>
   </div>
 </div>
@@ -127,7 +122,6 @@ span.price {
 <p><span class="price" style="color:white; background-color:red; font-family:comic sans ms;"><b>Total :Rs{{t}}</b></span></p>
 </div>
 <br><br><br><br><br>
-
-</body>
-</html>
 {% endblock %}
+<!--</body>-->
+</html>
