--- a/templates/register.html
+++ b/templates/register.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block content %}
 <!DOCTYPE html>
-<html>  
+<html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">  
+<!--<meta name="viewport" content="width=device-width, initial-scale=1">  -->
 <style>  
 body{  
   font-family: Calibri, Helvetica, sans-serif;  
@@ -48,8 +48,8 @@ hr {
   opacity: 1;  
 }  
 </style>  
-</head>  
-<body>  
+</head>
+<!--<body>  -->
 <form method="post" action="register" >
     {% csrf_token %}
 
@@ -75,6 +75,6 @@ hr {
     <input type="password" placeholder="Retype Password" name="psw-repeat" required>  
     <button type="submit" class="registerbtn">Register</button>    
 </form>  
-</body>  
-</html>
+<!--</body>  -->
 {% endblock %}
+</html>
