--- a/templates/search.html
+++ b/templates/search.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="wrapper row3">
-  <main class="hoc container clear">
+<!DOCTYPE html>
+<html>
+<head>
+</head>
 
     <!-- main body -->
 
-    <section id="introblocks">
       <ul class="nospace group btmspace-80">
     {% for i in pr %}
         <li class="one_third">
@@ -19,14 +20,8 @@
             </figcaption>
           </figure>
         </li>
-     {% endfor %}
+          {% endfor %}
       </ul>
-    </section>
-<a id="backtotop" href="#top"><i class="fas fa-chevron-up"></i></a>
-<!-- JAVASCRIPTS -->
-<script src="{% static 'hm/layout/scripts/jquery.min.js' %}"></script>
-<script src="{% static 'hm/layout/scripts/jquery.backtotop.js' %}"></script>
-<script src="{% static 'hm/layout/scripts/jquery.mobilemenu.js' %}"></script>
-</body>
-</html>
 {% endblock %}
+    <!--</body>-->
+</html>
