--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,15 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="{% static 'hm/layout/styles/layout.css' %}" rel="stylesheet" type="text/css" media="all">
-<body id="top" class="abcd" style="background-image:url('{% static 'hm/images/demo/backgrounds/pine.jpg' %}');">
+<body id="top">
+<div class="abcd" style="background-image:url('{% static 'hm/images/demo/backgrounds/pine.jpg' %}');">
 <style>
   .abcd{
-    background-position:center;
+    background-position:cover;
     background-repeat:no-repeat;
     background-size:100% 100%;
     }
-    </style>
+</style>
 </head>
   <div class="wrapper row1">
     <header id="header" class="hoc clear">
@@ -41,6 +42,7 @@
 <script src="{% static 'hm/layout/scripts/jquery.min.js' %}"></script>
 <script src="{% static 'hm/layout/scripts/jquery.backtotop.js' %}"></script>
 <script src="{% static 'hm/layout/scripts/jquery.mobilemenu.js' %}"></script>
+</div>
 </body>
-<!--</html>-->
+
 
